# FF_robot

./: .env.example  .gitignore  AGENTS.md  README.md  brd.md  prd.md  project_tree.md
agentos_examples/: AlphaDog_功能清单.md  CMakeLists.txt  README.md  ROS通讯与动作调用开发指南.md  package.xml  protocol_format.md  协议到ROS通讯动作调用架构.md
agentos_examples/cplusplus/: hold_skill.cpp  invoke_skill.cpp  skill_contrl.cpp  skill_status.cpp
agentos_examples/protocol/dart/lib/: robot_protocol.dart
agentos_examples/protocol/dart/lib/src/: codec.dart
agentos_examples/protocol/python/robot_protocol/: __init__.py  codec.py  crc.py  models.py
agentos_examples/protocol/python/tests/: test_protocol.py
agentos_examples/python/: hold_skill.py  invoke_skill.py  skill_contrl.py  skill_status.py
docs/: acceptance_checklist.md  backlog.md  ble_control_data_format.md  ble_integration.md  ble_ros_sdk_execution_plan.md  brd_product_share.md  codex_development_roadmap.md  cursor_opus_development_roadmap.md  cursor_opus_prompts.md  deploy.md  mvp_schedule.md  phase0_design.md  robot_control_api.md  ros_state_integration.md  rostopic_list.md  skill_action.md  voice_detection.md  动作执行记录.md
mobile_sdk/: README.md  pubspec.yaml
robot_server/: README.md  pyproject.toml
robot_server/robot_server/: __init__.py  app.py  config.py  main.py  models.py
robot_server/robot_server/ros/: __init__.py  bridge.py  skill_bridge.py  state_bridge.py
robot_server/robot_server/runtime/: __init__.py  command_queue.py  control_service.py  robot_runtime.py  state_store.py
robot_server/robot_server/transports/: __init__.py  base.py
robot_server/robot_server/transports/ble/: __init__.py  bluez_gatt.py  bluez_gatt_glib.py
robot_server/robot_server/transports/mqtt/: __init__.py  router.py
robot_server/robot_server/transports/tcp/: __init__.py  server.py
robot_server/tests/: test_ble_backend_factory.py  test_ble_characteristic.py  test_command_queue.py  test_control_service.py  test_mqtt_router.py  test_robot_runtime.py  test_ros_skill_bridge.py  test_ros_state_bridge.py  test_tcp_transport.py
robot_skill/: AlphaDog_功能清单.md  push_ext_actions_to_server.sh  run_action_on_dog.sh
scripts/: install_robot_server_service.sh  mqtt_smoke.py  prune_voice_models.sh  recover_bluetooth.sh  robot_ble_peripheral.env.example  robot_ble_peripheral.py  robot_ble_peripheral.service  robot_ble_to_tcp_hook.py  robot_server.service  run_robot_server.py  server_run.sh  start_robot_server.sh  sync_to_robot.sh  tcp_smoke.py  watch_and_sync_to_robot.sh
(+177 files in other folders)
