<?xml version="1.0"?>
<package format="2">
  <name>agentos_examples</name>
  <version>0.0.0</version>
  <description>The agentos_examples package</description>

  <maintainer email="support@weilan.com">support</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>actionlib</depend>
  <depend>agent_msgs</depend>
  <depend>ros_alphadog</depend>

  <export>
  </export>
</package>
